# NativeVoxelizer

./: .clang-format  .clang-tidy  CMakeLists.txt
ExternCInterface/: CMakeLists.txt
ExternCInterface/include/: debug.h  master.h  meshes.h
ExternCInterface/src/: debug.cpp  master.cpp  meshes.cpp
ExternCInterface/src/impl/: marshal_guid.hpp
SYCLKernels/: CMakeLists.txt
SYCLKernels/include/: debug_controller.hpp  impl.hpp  master_controller.hpp  meshes_controller.hpp
SYCLKernels/src/: debug_controller.cpp  master_controller.cpp  meshes_controller.cpp
SYCLKernels/src/impl/: debug_controller.cpp  debug_controller.hpp  logger.cpp  logger.hpp  master_controller.cpp  master_controller.hpp  meshes_controller.cpp  meshes_controller.hpp  sycl.hpp  vertices_converters.cpp  vertices_converters.hpp
